--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <meta name="theme-color" content="#1976d2">
   <meta name="description" content="David (dsgdsr) Sanchez Portfolio">
 
+  <script data-host="https://microanalytics.io" data-dnt="false" src="https://microanalytics.io/js/script.js" id="ZwSg9rf6GA" async defer></script>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
 </head>
