✨ Enhance font loading

--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,13 @@
 
         <link rel="manifest" href="manifest.webmanifest" />
 
+        <!-- Preload fonts -->
+        <link rel="preload" href="/assets/fonts/roboto-mono-v13-latin-300.woff2" as="font" type="font/woff2"  crossorigin="anonymous" />
+        <link rel="preload" href="/assets/fonts/roboto-mono-v13-latin-regular.woff2" as="font" type="font/woff2"  crossorigin="anonymous" />
+        <link rel="preload" href="/assets/fonts/roboto-mono-v13-latin-500.woff2" as="font" type="font/woff2"  crossorigin="anonymous" />
+        <link rel="preload" href="/assets/fonts/roboto-mono-v13-latin-600.woff2" as="font" type="font/woff2"  crossorigin="anonymous" />
+        <link rel="preload" href="/assets/fonts/roboto-mono-v13-latin-700.woff2" as="font" type="font/woff2"  crossorigin="anonymous" />
+
         <!-- Matomo -->
         <script>
             var _paq = (window._paq = window._paq || []);
